--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Homework 10</title>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
+      rel="stylesheet">
   </head>
   <body>
     <div class="toolbar">
